# vehicle_matrix_analysis

./: .gitignore  README.md  create_venv.sh  requirements.txt  setup.cfg
framework/: VehicleDataManager.py  __init__.py  tests.py  utility.py
src/framework/: VehicleDataManager.py  __init__.py
src/ors_booking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: tests.py
