[metadata]
author=Rohan
description=IDP ORS Booking microservice
name=ors-booking

[options]
packages=find:
package_dir=
    =src
install_requires=
    black==23.3.0
    matplotlib==3.7.1
    numpy==1.24.3
    pytest==7.3.1

[options.packages.find]
where=src
exclude=build

[options.entry_points]
console_scripts=
    next_version=build.build_targets:next_version [build]
    unit_test=build.build_targets:unit_test [build]

